<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:theme="@style/Theme.AppCompat"
    android:background="@drawable/bottom_dialog_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_title"
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/grabber"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginStart="24dp"
            android:text="@string/digital_setting_title"
            android:textColor="@color/ai_icontext1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            app:layout_constraintTop_toBottomOf="@id/iv_title"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/app_setting_exit"
            android:layout_marginEnd="24dp"
            android:layout_gravity="end"
            app:layout_constraintTop_toTopOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1DFFFFFF"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/ll_agent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/settings_item_bg"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/iv_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_agent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/digital_setting_agent"
                android:textColor="#FFFFFF"
                android:alpha="0.3"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="start" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_preset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/digital_setting_preset"
                    android:textColor="#B2FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <Spinner
                    android:id="@+id/sp_preset"
                    android:layout_width="180dp"
                    android:layout_height="44dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/spinner_background"
                    android:spinnerMode="dropdown"
                    android:dropDownWidth="match_parent"
                    style="@style/SpinnerItemStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_voice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/digital_setting_voice"
                    android:textColor="#B2FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <Spinner
                    android:id="@+id/sp_voice"
                    android:layout_width="180dp"
                    android:layout_height="44dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/spinner_background"
                    android:spinnerMode="dropdown"
                    android:dropDownWidth="match_parent"
                    style="@style/SpinnerItemStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/digital_setting_model"
                    android:textColor="#B2FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <Spinner
                    android:id="@+id/sp_model"
                    android:layout_width="180dp"
                    android:layout_height="44dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/spinner_background"
                    android:spinnerMode="dropdown"
                    android:dropDownWidth="match_parent"
                    style="@style/SpinnerItemStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/digital_setting_language"
                    android:textColor="#B2FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <Spinner
                    android:id="@+id/sp_language"
                    android:layout_width="180dp"
                    android:layout_height="44dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/spinner_background"
                    android:spinnerMode="dropdown"
                    android:dropDownWidth="match_parent"
                    style="@style/SpinnerItemStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/settings_item_bg"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/ll_agent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/digital_setting_device"
                android:textColor="#FFFFFF"
                android:alpha="0.3"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="start" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_microphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/digital_setting_microphone"
                    android:textColor="#B2FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <Spinner
                    android:id="@+id/sp_microphone"
                    android:layout_width="180dp"
                    android:layout_height="44dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/spinner_background"
                    android:spinnerMode="dropdown"
                    android:dropDownWidth="match_parent"
                    android:prompt="@array/digital_setting_microphone_array"
                    style="@style/SpinnerItemStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_speaker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/digital_setting_speaker"
                    android:textColor="#B2FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <Spinner
                    android:id="@+id/sp_speaker"
                    android:layout_width="180dp"
                    android:layout_height="44dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/spinner_background"
                    android:spinnerMode="dropdown"
                    android:dropDownWidth="match_parent"
                    android:prompt="@array/digital_setting_speaker_array"
                    style="@style/SpinnerItemStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="64dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_noise_cancellation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/digital_setting_noise_cancellation"
                    android:textColor="#B2FFFFFF"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_noise_cancellation"
                    android:layout_width="51dp"
                    android:layout_height="31dp"
                    android:layout_marginEnd="16dp"
                    android:button="@drawable/cb_def_selector"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_device" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
