<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ai_fill1"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="25dp"
    android:paddingBottom="22dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@android:color/transparent"
            android:src="@drawable/app_icon_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/digital_detail_agent_title"
            android:textColor="#C3C3C3"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@android:color/transparent"
            android:src="@drawable/app_living_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_wifi"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@android:color/transparent"
            android:src="@drawable/scene_detail_net_poor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_settings"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_info"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@android:color/transparent"
            android:src="@drawable/app_living_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_wifi"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        app:cardBackgroundColor="#6627272A"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <FrameLayout
            android:id="@+id/layoutContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <io.agora.scene.common.ui.widget.DraggableView
                android:id="@+id/vDragBigWindow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end" />

            <io.agora.scene.common.ui.widget.DraggableView
                android:id="@+id/vDragSmallWindow"
                android:layout_width="192dp"
                android:layout_height="100dp"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />
        </FrameLayout>
        <include
            android:id="@+id/v_not_joined"
            layout="@layout/digital_not_joined_view" />
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/ll_calling"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageButton
                android:id="@+id/btn_mic"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/app_living_mic_on" />

            <ImageButton
                android:id="@+id/btn_camera"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/app_living_camera_on" />

            <LinearLayout
                android:id="@+id/ll_end_call"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:background="@drawable/btn_red_radio_enable"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/app_living_end" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/digital_detail_end_call"
                    android:textColor="#FDFCFB"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_join_call"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_blue_radio_enable"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            tools:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/cov_detail_join_call" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digital_detail_join_call"
                android:textColor="#FDFCFB"
                android:textSize="18sp" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>